Word wraping issue fixed in Ipad view on portrait page.

--- a/web-app/css/cgrails/default/less/discipline-list.less
+++ b/web-app/css/cgrails/default/less/discipline-list.less
@@ -191,6 +191,15 @@
 	}
 }
 
+@media (min-width: 768px) and (max-width: 979px) {
+	#product-list {
+		.heading {
+			word-break: break-all;
+			word-wrap:break-word;
+		}
+	}
+}
+
 @media (min-width: 768px) and (max-width: 1200px) { 
 	#product-list {
 		.discipline-music-container{
